관리자 작업 중

--- a/src/main/resources/templates/admin/volunteer.html
+++ b/src/main/resources/templates/admin/volunteer.html
@@ -254,52 +254,52 @@
                         <div class="user__profile">
                             <h5>게시글 제목</h5>
                             <div class="user__profile__input">
-                                <input type="text" name="" value="서울시 연탄 봉사활동 모집" readonly="true"/>
+                                <input type="text" name="" value="서울시 연탄 봉사활동 모집"/>
                             </div>
                         </div>
                         <div class="user__profile">
                             <h5>봉사기간</h5>
                             <div class="user__profile__input">
-                                <input type="text" name="" value="2023-03-01" readonly="true"/>
-                                <input type="text" name="" value="2023-04-20" readonly="true"/>
+                                <input type="text" name="" value="2023-03-01"/>
+                                <input type="text" name="" value="2023-04-20"/>
                             </div>
                         </div>
                         <div class="user__profile">
                             <h5>봉시시간</h5>
                             <div class="user__profile__input">
-                                <input type="text" name="" value="12:00" readonly="true"/>~
-                                <input type="text" name="" value="17:00" readonly="true"/>
+                                <input type="text" name="" value="12:00"/>~
+                                <input type="text" name="" value="17:00"/>
                             </div>
                         </div>
                         <div class="user__profile">
                             <h5>모집기간</h5>
                             <div class="user__profile__input">
-                                <input type="text" name="" value="2023-02-01" readonly="true"/>
-                                <input type="text" name="" value="2023-02-25" readonly="true"/>
+                                <input type="text" name="" value="2023-02-01"/>
+                                <input type="text" name="" value="2023-02-25"/>
                             </div>
                         </div>
                         <div class="user__profile">
                             <h5>모집인원</h5>
                             <div class="user__profile__input">
-                                <input type="text" name="" value="30명" readonly="true"/>
+                                <input type="text" name="" value="30명"/>
                             </div>
                         </div>
                         <div class="user__profile">
                             <h5>봉사분야</h5>
                             <div class="user__profile__input">
-                                <input type="text" name="" value="다문화가정" readonly="true"/>
+                                <input type="text" name="" value="다문화가정"/>
                             </div>
                         </div>
                         <div class="user__profile">
                             <h5>봉사장소</h5>
                             <div class="user__profile__input">
-                                <input type="text" name="" value="서울 복지센터" readonly="true"/>
+                                <input type="text" name="" value="서울 복지센터"/>
                             </div>
                         </div>
                         <div class="user__profile">
                             <h5>등록기관</h5>
                             <div class="user__profile__input">
-                                <input type="text" name="" value="서울 복지센터" readonly="true"/>
+                                <input type="text" name="" value="서울 복지센터"/>
                             </div>
                         </div>
                         <h4 style="margin-top: 20px;">이미지</h4>
@@ -308,10 +308,9 @@
                             <!-- 임시로 name='file' 해둠 -->
                             <label>
                                 <div class="content__img">
-                                    <img
-                                            src="https://us.123rf.com/450wm/mathier/mathier1905/mathier190500002/134557216-%EC%8D%B8%EB%84%A4%EC%9D%BC-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EC%97%86%EC%9D%8C-%ED%8F%AC%EB%9F%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%B0%8F-%EC%9B%B9%EC%82%AC%EC%9D%B4%ED%8A%B8%EC%9A%A9-%EC%9E%90%EB%A6%AC-%ED%91%9C%EC%8B%9C%EC%9E%90.jpg?ver=6"/>
+                                    <img src="https://us.123rf.com/450wm/mathier/mathier1905/mathier190500002/134557216-%EC%8D%B8%EB%84%A4%EC%9D%BC-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EC%97%86%EC%9D%8C-%ED%8F%AC%EB%9F%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%B0%8F-%EC%9B%B9%EC%82%AC%EC%9D%B4%ED%8A%B8%EC%9A%A9-%EC%9E%90%EB%A6%AC-%ED%91%9C%EC%8B%9C%EC%9E%90.jpg?ver=6"/>
                                 </div>
-                                <input type="file" name="file" style="display: none"/>
+                                <input type="file" name="file" id="photo-picker" style="display: none"/>
                             </label>
                             <!--                    <label>-->
                             <!--                      <div class="content__img">-->
