--- a/src/main/resources/templates/admin/inquiry.html
+++ b/src/main/resources/templates/admin/inquiry.html
@@ -40,7 +40,7 @@
                                 <div class="status-item-name">답변 대기중</div>
                             </div>
                             <div class="status-item-count">
-                                <a href="">0</a>
+                                <div th:text="${counts[0]}">1</div>
                             </div>
                         </li>
                         <li class="status-list-item">
@@ -63,7 +63,7 @@
                                 <div class="status-item-name">답변 완료</div>
                             </div>
                             <div class="status-item-count">
-                                <a href="">0</a>
+                                <div th:text="${counts[1]}">1</div>
                             </div>
                         </li>
                         <li class="status-list-item">
@@ -221,18 +221,14 @@
             <div class="modal__header">
                 <h3 class="modal__title">문의 상세보기</h3>
                 <a class="modal-close">
-                    <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            data-name="Capa 1"
-                            id="Capa_1"
-                            viewBox="0 0 20 19.84">
-                        <path
-                                d="M10.17,10l3.89-3.89a.37.37,0,1,0-.53-.53L9.64,9.43,5.75,5.54a.37.37,0,1,0-.53.53L9.11,10,5.22,13.85a.37.37,0,0,0,0,.53.34.34,0,0,0,.26.11.36.36,0,0,0,.27-.11l3.89-3.89,3.89,3.89a.34.34,0,0,0,.26.11.35.35,0,0,0,.27-.11.37.37,0,0,0,0-.53Z"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" data-name="Capa 1" id="Capa_1" viewBox="0 0 20 19.84">
+                        <path d="M10.17,10l3.89-3.89a.37.37,0,1,0-.53-.53L9.64,9.43,5.75,5.54a.37.37,0,1,0-.53.53L9.11,10,5.22,13.85a.37.37,0,0,0,0,.53.34.34,0,0,0,.26.11.36.36,0,0,0,.27-.11l3.89-3.89,3.89,3.89a.34.34,0,0,0,.26.11.35.35,0,0,0,.27-.11.37.37,0,0,0,0-.53Z"/>
                     </svg>
                 </a>
             </div>
             <form action="">
                 <main class="modal__main">
+                    <input type="hidden" name="id" id="inquiryId">
                     <div class="modal__profile__top">
                         <h4>회원정보</h4>
                         <div class="user__profile">
@@ -249,15 +245,27 @@
                         </div>
                     </div>
                     <div class="modal__profile__bottom">
+                        <h4>문의 제목</h4>
+                        <div class="user__profile__input" style="margin: 0">
+                            <input type="text" name="inquiryTitle" id="inquiryTitle" value="example@gmail.com" readonly="true"/>
+                        </div>
+                    </div>
+                    <div class="modal__profile__bottom">
                         <h4>문의 내용</h4>
                         <textarea cols="30" rows="10" id="inquiryContent" readonly="true">문의 내용</textarea>
+                    </div>
+                    <div class="modal__profile__bottom">
+                        <h4>답변 제목</h4>
+                        <div class="user__profile__input" style="margin: 0">
+                            <input type="text" name="answerTitle" id="answerTitle" placeholder="답변 제목"/>
+                        </div>
                     </div>
                     <div class="modal__profile__bottom">
                         <h4>답변 작성</h4>
                         <textarea cols="20" rows="10" id="answerContent" placeholder="답변 내용 작성"></textarea>
                     </div>
                     <div class="user__profile__button">
-                        <button id="completeBtn" class="button__type_2 button__color__green">
+                        <button id="completeBtn" class="button__type_2 button__color__green" type="button">
                             답변완료
                         </button>
                     </div>
