기본정보 등록 작업중 파일만 하면 됨

--- a/src/main/resources/templates/funding/funding-initial-info.html
+++ b/src/main/resources/templates/funding/funding-initial-info.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="/css/funding/funding-topContent.css">
     <link rel="stylesheet" href="/css/funding/funding-initial-info.css">
     <link rel="stylesheet" href="/css/funding/funding-initial-response.css">
+    <link rel="stylesheet" href="/css/funding/funding.css">
+
 </head>
 <style>
 .initialInfo::after {
@@ -30,13 +32,15 @@
         <div class="project-wrap">
             <div th:insert="~{funding/funding-plan-header.html :: planHeader}"></div>
             <div th:insert="~{funding/funding-topContent.html :: topContent}"></div>
+
+            <!--모달창-->
             <div class="modal-layer" style="display: none;">
                 <div class="modal-wrapper">
                     <div class="modal-back">
                         <div class="modal-posWrap">
                             <div data-ignore-lock="true" class="modalWrap">
                                 <div class="modal-header">
-                                     <button class="modalBt modal-closeBt modalCloseButton fnt-p1" color="transparent">
+                                     <button type="button" class="modalBt modal-closeBt modalCloseButton fnt-p1" color="transparent">
                                         <span> 
                                             <div name="close-1" class="icon-svg Modal-svg">
                                                 <svg viewBox="0 0 48 48">
@@ -57,10 +61,11 @@
                     </div>
                 </div>
             </div>
+
             <div id="_topContent"></div>
             
             <div class="contents" size="228">
-                <div class="plan-content">
+                <form class="plan-content" th:action="@{/funding/funding-initial-info}" method="post" enctype="multipart/form-data" name="initialForm">
                     <div class="project-itemWrap">
                         <dl class="project-info">
                             <dt class="project-infoTitle">프로젝트 카테고리
@@ -81,7 +86,7 @@
                                 <p class="form-title">카테고리</p>
                                 <div class="selectWrap">
                                     <span class="input-wrap input-select-wrap" readonly="">
-                                        <input readonly="" type="text" inputmode="text" autocomplete="off" autocapitalize="off" class="innerInput inputCategory" value="디지털 게임">
+                                        <input readonly="" type="text" inputmode="text" autocomplete="off" autocapitalize="off" name="fundingCategory" class="innerInput inputCategory" value="">
                                         <div name="arrow2-down" class="icon-svg">
                                             <svg viewBox="0 0 48 48">
                                                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -228,7 +233,7 @@
                                 <div class="input-guideCheck-wrapper">
                                     <div class="input-guide-wrapper input-guide-lengthCheck inputBorder">
                                         <span class="inputWrapper-style1 inputWrapper-style2 ">
-                                            <input type="text" maxlength="31" inputmode="text" placeholder="긴 제목을 입력해주세요" autocomplete="off" autocapitalize="off" class="innerInput longInput inputText" value="">
+                                            <input type="text" maxlength="31" inputmode="text" placeholder="긴 제목을 입력해주세요" name="fundingTitle" autocomplete="off" autocapitalize="off" class="innerInput longInput inputText" value="">
                                         </span>
                                     </div>
                                     <div class="notice-area notice-area">
@@ -256,6 +261,7 @@
                                                 </div>
                                             </em>
                                         </button>
+
                                         <div class="areaTooltip">
                                             <div class="toolTip-content">
                                                 <div class="title">짧은 제목은 <br>어디에 쓰이나요?</div>
@@ -272,10 +278,11 @@
                                         </div>
                                     </div>
                                 </div>
+
                                 <div class="input-guideCheck-wrapper">
                                     <div class="input-guide-lengthCheck inputBorder">
                                         <span class="inputWrapper-style1 inputWrapper-style2">
-                                            <input type="text"  maxlength="6" inputmode="text" placeholder="짧은 제목을 입력해주세요" autocomplete="off" autocapitalize="off" class="innerInput shortInput inputText" value="">
+                                            <input type="text"  maxlength="6" inputmode="text" placeholder="짧은 제목을 입력해주세요" name="fundingShortTitle" autocomplete="off" autocapitalize="off" class="innerInput shortInput inputText" value="">
                                         </span>
                                     </div>
                                     <div class="notice-area">
@@ -286,6 +293,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="project-itemWrap">
                         <dl class="project-info">
                             <dt class="project-infoTitle">프로젝트 요약
@@ -346,7 +354,7 @@
                                 <div class="input-guideCheck-wrapper">
                                     <div class="input-check input-check inputBorder">
                                         <div class="textareaWrap1 textareaWrap2">
-                                            <textarea class="textarea-style inputText" maxlength="50"></textarea>
+                                            <textarea class="textarea-style inputText" name="fundingSummary" maxlength="50"></textarea>
                                         </div>
                                     </div>
                                     <div class="notice-area">
@@ -448,12 +456,19 @@
                                     </div>
                                     <input type="file" id="imageFile" accept=".jpg, .jpeg, .png" multiple="">
                                 </div>
-                                <li class="ImgStyleList firstTest imgList">
-                                    
-                                </li>
+                                        <li class="ImgStyleList firstTest imgList">
+                                            <!--썸네일 이미지-->
+                                        </li>
                             </div>
                         </div>
                     </div>
+                    <div class="buttonWrap">
+<!--                        <button type="button" class="lineButton pdc-btn-l" color="grayEditor200">취소</button>-->
+                        <button  class="solidButton pdc-btn-l"  color="mainEditorP80">
+                            <span>등록</span>
+                        </button>
+                    </div>
+                </form>
                 </div>
             </div>
         </div>
@@ -463,4 +478,142 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/js/funding/funding-initial-info.js"></script>
 <script src="/js/funding/funding-file.js"></script>
+<script>
+    globalThis.uuids;
+
+    //===========================================
+    FileList.prototype.forEach = Array.prototype.forEach;
+
+    const $alertModal = $(".alert-modal-display");
+    const alertMsg = ['사진은 최소 4개이상 넣어 주세요.', '제목을 입력해주세요.', '내용을 입력해주세요.'];
+
+    let $ul = $(".img_ul");
+    let files = [];
+    if(fileDTOS != null && fileDTOS != undefined){
+        fileDTOS.forEach((file, i) => {
+            files.push(file);
+        });
+    }
+
+    $("input[type=file]").on("change", function () {
+        const $files = $("input[type=file]")[0].files;
+        let formData = new FormData();
+
+        $($files).each((i, file) => {
+            files.push(file);
+        })
+
+        files.forEach((file, e) => {
+            formData.append("file", file);
+        })
+
+
+        $.ajax({
+            url: "/file/upload",
+            type: "post",
+            data: formData,
+            contentType: false,
+            processData: false,
+            success: function (uuids) {
+                globalThis.uuids = uuids;
+                console.log(uuids);
+                $files.forEach((file, i) => {
+                    if (file.type.startsWith("image")) {
+                        let text = `
+                        <li class="img_list" id="li${i}">
+
+                                <article class="img_wrapper">
+                                    <div class="img_div">
+                                        <img src="/file/display?fileName=${toStringByFormatting(new Date())}/t_${uuids[i]}_${file.name}" class="inserted_img">
+                                    </div>
+                                </article>
+                            </div>
+                        </li>
+                `;
+                        $ul.append(text);
+                    }
+                });
+            }
+        });
+    });
+
+
+    // 이미지 지울 때
+    $ul.on("click",".close-button", function(e){
+        const dataTransfer = new DataTransfer();
+
+        let target = $(e.currentTarget).parent().parent().parent();
+        let fileArray = Array.from(files);
+        let ul = target.parent();
+        let i = ul.find("li").index(target);
+        files = [];
+
+        fileArray.splice(i, 1);
+        fileArray.forEach(file => {
+            if(file.fileOriginalName == null && file.fileOriginalName == undefined){
+                dataTransfer.items.add(file);
+            }else {
+                files.push(file);
+            }
+        })
+
+        target.remove();
+        dataTransfer.files.forEach((file, i) =>{
+            files.push(file);
+        });
+
+        console.log(files);
+    });
+
+    $(".save-button").click(() => {
+        const $files = $("input[type=file]")[0].files;
+        let text = "";
+
+        let boardTitle = $("input[name='boardTitle']").val();
+        let boardContent = $(".proposal_content").val();
+
+        const startDate = $("input[name='startDate']").val(); // 시작 날짜 값 가져오기
+        const endDate = $("input[name='endDate']").val(); // 종료 날짜 값 가져오기
+
+        FileList.prototype.forEach = Array.prototype.forEach;
+        files.forEach((file, i) => {
+            text +=
+                `
+                <input type="hidden" name="fileDTOS[${i}].fileOriginalName" value="${file.name}">
+                <input type="hidden" name="fileDTOS[${i}].fileUuid" value="${globalThis.uuids[i]}">
+                <input type="hidden" name="fileDTOS[${i}].filePath" value="${toStringByFormatting(new Date())}">
+                `;
+        });
+        $("form[name=form]").append(text);
+        $("form[name=form]").submit();
+    })
+    /*****************************************************/
+    function leftPad(value) {
+        if (value >= 10) {
+            return value;
+        }
+
+        return `0${value}`;
+    }
+
+    function toStringByFormatting(source, delimiter = '/') {
+        const year = source.getFullYear();
+        const month = leftPad(source.getMonth() + 1);
+        const day = leftPad(source.getDate());
+
+        return [year, month, day].join(delimiter);
+    }
+
+
+    function alertModal(errorMsg) {
+
+        $(".alert").text(errorMsg);
+        $alertModal.fadeIn();
+        setTimeout(function () {
+            $alertModal.fadeOut();
+        }
+
+
+</script>
+
 </html>
