--- a/src/main/resources/templates/admin/gongyangmi-refund.html
+++ b/src/main/resources/templates/admin/gongyangmi-refund.html
@@ -33,24 +33,15 @@
                     <ul class="status-list">
                         <li class="status-list-item">
                             <div class="status-item-wrapper">
-                                <svg
-                                        width="36"
-                                        height="36"
-                                        viewBox="0 0 36 36"
-                                        fill="none"
-                                        xmlns="http://www.w3.org/2000/svg">
+                                <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <rect width="36" height="36" rx="12" fill="#EDFEE0"></rect>
-                                    <path
-                                            d="M9.75 12.75H24.25C25.3546 12.75 26.25 13.6454 26.25 14.75V24.25C26.25 25.3546 25.3546 26.25 24.25 26.25H11.75C10.6454 26.25 9.75 25.3546 9.75 24.25V12.75Z"
-                                            fill="#11CA2D"></path>
-                                    <path
-                                            d="M9.75 12.5C9.75 11.3954 10.6454 10.5 11.75 10.5H16.125L18 12.75H9.75V12.5Z"
-                                            fill="#11CA2D"></path>
+                                    <path d="M9.75 12.75H24.25C25.3546 12.75 26.25 13.6454 26.25 14.75V24.25C26.25 25.3546 25.3546 26.25 24.25 26.25H11.75C10.6454 26.25 9.75 25.3546 9.75 24.25V12.75Z" fill="#11CA2D"></path>
+                                    <path d="M9.75 12.5C9.75 11.3954 10.6454 10.5 11.75 10.5H16.125L18 12.75H9.75V12.5Z" fill="#11CA2D"></path>
                                 </svg>
-                                <div class="status-item-name">요청 대기</div>
+                                <div class="status-item-name">요청 승인</div>
                             </div>
                             <div class="status-item-count">
-                                <a href="">0</a>
+                                <div th:text="${counts[0]}">1</div>
                             </div>
                         </li>
                         <li class="status-list-item">
@@ -59,30 +50,21 @@
                                     <div class="problem-icon">
                                         <div>
                                             <div>
-                            <span>
-                              <svg
-                                      width="36"
-                                      height="36"
-                                      viewBox="0 0 36 36"
-                                      fill="none"
-                                      xmlns="http://www.w3.org/2000/svg">
-                                <rect width="36" height="36" rx="12" fill="#EDFEE0"></rect>
-                                <path
-                                        d="M9.75 12.75H24.25C25.3546 12.75 26.25 13.6454 26.25 14.75V24.25C26.25 25.3546 25.3546 26.25 24.25 26.25H11.75C10.6454 26.25 9.75 25.3546 9.75 24.25V12.75Z"
-                                        fill="#11CA2D"></path>
-                                <path
-                                        d="M9.75 12.5C9.75 11.3954 10.6454 10.5 11.75 10.5H16.125L18 12.75H9.75V12.5Z"
-                                        fill="#11CA2D"></path>
-                              </svg>
-                            </span>
+                                                <span>
+                                                    <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <rect width="36" height="36" rx="12" fill="#EDFEE0"></rect>
+                                                        <path d="M9.75 12.75H24.25C25.3546 12.75 26.25 13.6454 26.25 14.75V24.25C26.25 25.3546 25.3546 26.25 24.25 26.25H11.75C10.6454 26.25 9.75 25.3546 9.75 24.25V12.75Z" fill="#11CA2D"></path>
+                                                        <path d="M9.75 12.5C9.75 11.3954 10.6454 10.5 11.75 10.5H16.125L18 12.75H9.75V12.5Z" fill="#11CA2D"></path>
+                                                    </svg>
+                                                </span>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="status-item-name">요청 승인</div>
+                                <div class="status-item-name">요청 대기</div>
                             </div>
                             <div class="status-item-count">
-                                <a href="">0</a>
+                                <div th:text="${counts[1]}">1</div>
                             </div>
                         </li>
 
@@ -95,18 +77,8 @@
                 <div class="table__box">
                     <div class="table__search__form">
                         <div>
-                            <button
-                                    id="delete-button"
-                                    class="button__type_2 button__color__red"
-                                    style="width: 120px">
-                                요청내역 삭제
-                            </button>
-                            <button
-                                    id="answer-check"
-                                    class="button__type_3 button__color__green"
-                                    style="width: 120px;">
-                                요청 승인
-                            </button>
+                            <button id="delete-button" class="button__type_2 button__color__red" style="width: 120px">요청내역 삭제</button>
+                            <button id="answer-check" class="button__type_3 button__color__green" style="width: 120px;">요청 승인</button>
                         </div>
                         <!-- default.css -->
                         <div class="search-box-wrap">
@@ -229,13 +201,8 @@
             <div class="modal__header">
                 <h3 class="modal__title">환전 요청 상세보기</h3>
                 <a class="modal-close">
-                    <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            data-name="Capa 1"
-                            id="Capa_1"
-                            viewBox="0 0 20 19.84">
-                        <path
-                                d="M10.17,10l3.89-3.89a.37.37,0,1,0-.53-.53L9.64,9.43,5.75,5.54a.37.37,0,1,0-.53.53L9.11,10,5.22,13.85a.37.37,0,0,0,0,.53.34.34,0,0,0,.26.11.36.36,0,0,0,.27-.11l3.89-3.89,3.89,3.89a.34.34,0,0,0,.26.11.35.35,0,0,0,.27-.11.37.37,0,0,0,0-.53Z"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" data-name="Capa 1" id="Capa_1" viewBox="0 0 20 19.84">
+                        <path d="M10.17,10l3.89-3.89a.37.37,0,1,0-.53-.53L9.64,9.43,5.75,5.54a.37.37,0,1,0-.53.53L9.11,10,5.22,13.85a.37.37,0,0,0,0,.53.34.34,0,0,0,.26.11.36.36,0,0,0,.27-.11l3.89-3.89,3.89,3.89a.34.34,0,0,0,.26.11.35.35,0,0,0,.27-.11.37.37,0,0,0,0-.53Z"/>
                     </svg>
                 </a>
             </div>
