--- a/src/main/resources/templates/community/free-detail.html
+++ b/src/main/resources/templates/community/free-detail.html
@@ -465,6 +465,9 @@
      </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+<script th:inline="javascript">
+    let freeBoard = [[${freeBoard}]]
+</script>
 <script src="/js/main/header.js"></script>
 <script src="/js/community/free-detail.js"></script>
 </html>
