--- a/src/main/resources/templates/community/review-detail.html
+++ b/src/main/resources/templates/community/review-detail.html
@@ -464,6 +464,9 @@
      </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+<script th:inline="javascript">
+    let review = [[${review}]]
+</script>
 <script src="/js/main/header.js"></script>
-<script src="/js/community/free-detail.js"></script>
+<script src="/js/community/review-detail.js"></script>
 </html>
