--- a/src/main/resources/static/css/community/free-create.css
+++ b/src/main/resources/static/css/community/free-create.css
@@ -343,7 +343,7 @@ div{
     min-width: 360px;
     display: flex;
     box-sizing: border-box;
-    z-index: 50;
+    z-index: 9999;
     left: 40%;
     top: 36%;
     position: fixed;
@@ -354,7 +354,7 @@ div{
 .modal-back{
     width: 100%;
     height: 100%;
-    z-index: 10;
+    z-index: 9990;
     left: 0;
     top: 0;
     background-color: rgba(0,0,0,.4);
@@ -409,6 +409,7 @@ div{
     color: #333334;
     fill: #333334;
     background-color: #f3f3f4;
+    cursor: pointer;
 }
 .choce2-btn{
     border: 0;
@@ -427,6 +428,7 @@ div{
     color: #fff;
     fill: #fff;
     background-color: rgba(229, 104, 89, 0.83);
+    cursor: pointer;
 }
 .choce1 :hover{
     background-color: #e6e6e7db;
