--- a/src/main/resources/templates/community/review-create.html
+++ b/src/main/resources/templates/community/review-create.html
@@ -80,6 +80,14 @@
     
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+<script th:inline="javascript">
+    let fileDTOS = null;
+    let reviewDTO = [[${reviewDTO}]];
+    if (reviewDTO == null || reviewDTO == undefined){
+    }else {
+        fileDTOS = reviewDTO.fileDTOS;
+    }
+</script>
 <script src="/js/main/header.js"></script>
-<script src="/js/community/free-create.js"></script>
+<script src="/js/community/review-create.js"></script>
 </html>
