--- a/src/main/resources/templates/admin/gongyangmi-refund.html
+++ b/src/main/resources/templates/admin/gongyangmi-refund.html
@@ -261,7 +261,7 @@
 <script th:inline="javascript">
   let ricePayments = [[${ricePaymentDTOS}]];
 </script>
-<script src="/js/admin/ajax.js"></script>
+<script src="/js/admin/admin-service.js"></script>
 <script src="/js/admin/gongyangmi-refund.js"></script>
 <script src="/js/admin/app.js"></script>
 <script src="/js/admin/events.js"></script>
