--- a/src/main/resources/templates/admin/volunteer-recruitment-board.html
+++ b/src/main/resources/templates/admin/volunteer-recruitment-board.html
@@ -293,7 +293,7 @@
 <script th:inline="javascript">
     let boards = [[${freeBoardDTOS}]];
 </script>
-<script src="/js/admin/ajax.js"></script>
+<script src="/js/admin/admin-service.js"></script>
 <script src="/js/admin/volunteer-recruitment-board.js"></script>
 <script src="/js/admin/app.js"></script>
 <script src="/js/admin/events.js"></script>
