--- a/src/main/resources/templates/admin/activity-review-board.html
+++ b/src/main/resources/templates/admin/activity-review-board.html
@@ -280,7 +280,7 @@
 <script th:inline="javascript">
     let boards = [[${reviewDTOS}]];
 </script>
-<script src="/js/admin/ajax.js"></script>
+<script src="/js/admin/admin-service.js"></script>
 <script src="/js/admin/active-review-board.js"></script>
 <script src="/js/admin/app.js"></script>
 <script src="/js/admin/events.js"></script>
