--- a/src/main/resources/templates/admin/payment.html
+++ b/src/main/resources/templates/admin/payment.html
@@ -253,7 +253,7 @@
 <script th:inline="javascript">
     let ricePayments = [[${ricePaymentDTOS}]];
 </script>
-<script src="/js/admin/ajax.js"></script>
+<script src="/js/admin/admin-service.js"></script>
 <script src="/js/admin/rice-payment.js"></script>
 <script src="/js/admin/app.js"></script>
 <script src="/js/admin/events.js"></script>
