--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -333,7 +333,7 @@
 <script th:inline="javascript">
     let members = [[${memberDTOS}]];
 </script>
-<script src="/js/admin/ajax.js"></script>
+<script src="/js/admin/admin-service.js"></script>
 <script src="/js/admin/user.js"></script>
 <script src="/js/admin/app.js"></script>
 <script src="/js/admin/events.js"></script>
