--- a/src/main/resources/templates/join-login/join-select.html
+++ b/src/main/resources/templates/join-login/join-select.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,13 @@
     <title>회원가입 페이지</title>
     <link rel="stylesheet" href="/css/join-login/select-page.css">
 </head>
+<style>
+    a {
+        text-decoration: underline;
+        font-weight: bold;
+        color: rgb(137 178 86);
+    }
+</style>
 <body>
     <div class="all-wrap">
         <div class="wrap">
@@ -39,11 +46,12 @@
                             <div class="login-another-inner">
                                 <span class="login-another-text">다른 방법으로 회원가입</span>
                             </div>
-                            <button class="login-circle">
-                                <div class="naver-login-wrap">
-                                    <svg width="34" height="34" viewBox="0 0 34 34" fill="none"><g clip-path="url(#clip0_226_6574)"><path d="M17 31.875C8.81875 31.875 2.125 25.1812 2.125 17C2.125 8.81875 8.81875 2.125 17 2.125C25.1812 2.125 31.875 8.81875 31.875 17C31.875 25.1812 25.1812 31.875 17 31.875Z" fill="#03C75A"></path><path d="M18.9338 17.3825L14.9105 11.6167H11.5742V22.3834H15.0663V16.6175L19.0896 22.3834H22.4259V11.6167H18.9338V17.3825Z" fill="white"></path></g><defs><clipPath id="clip0_226_6574"><rect width="29.75" height="29.75" fill="white" transform="translate(2.125 2.125)"></rect></clipPath></defs></svg>
-                                </div>
-                            </button>
+                               <button class="login-circle" onclick="location.href='/oauth2/authorization/naver'">
+                                    <div class="naver-login-wrap">
+                                        <svg width="34" height="34" viewBox="0 0 34 34" fill="none"><g clip-path="url(#clip0_226_6574)"><path d="M17 31.875C8.81875 31.875 2.125 25.1812 2.125 17C2.125 8.81875 8.81875 2.125 17 2.125C25.1812 2.125 31.875 8.81875 31.875 17C31.875 25.1812 25.1812 31.875 17 31.875Z" fill="#03C75A"></path><path d="M18.9338 17.3825L14.9105 11.6167H11.5742V22.3834H15.0663V16.6175L19.0896 22.3834H22.4259V11.6167H18.9338V17.3825Z" fill="white"></path></g><defs><clipPath id="clip0_226_6574"><rect width="29.75" height="29.75" fill="white" transform="translate(2.125 2.125)"></rect></clipPath></defs></svg>
+                                    </div>
+                               </button>
+                            </a>
                             <button type="button" class="login-circle email-join">
                                 <div class="email-login-wrap">
                                     <svg width="34" height="34" viewBox="0 0 34 34" fill="none"><circle cx="17" cy="17" r="14.875" fill="#D0D0D0"></circle><path fill-rule="evenodd" clip-rule="evenodd" d="M24.5557 10.8608H9.44458V12.0886H24.5557V10.8608ZM24.5557 12.0887L17.0001 17.8183L9.44458 12.0887H24.5557Z" fill="white"></path><path d="M20.1483 16.9997L24.5557 20.2737L24.5557 13.7256L20.1483 16.9997Z" fill="white"></path><path d="M13.852 16.9997L9.44458 20.2737L9.44458 13.7256L13.852 16.9997Z" fill="white"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M17.0001 19.4554L19.1589 17.8184L24.5557 21.9109L24.5557 23.1387H9.44458V21.9109L14.8414 17.8184L17.0001 19.4554Z" fill="white"></path></svg>
@@ -64,6 +72,9 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script th:inline="javascript">
+    let kakaoinfo = [[${kakaoInfo}]];
+</script>
 <script>
     $('.email-join').click(function() {
         console.log("이메일 로고 클릭");
