펀딩 아이템 작업중

--- a/src/main/resources/templates/funding/funding-initial-info.html
+++ b/src/main/resources/templates/funding/funding-initial-info.html
@@ -86,7 +86,7 @@
                                 <p class="form-title">카테고리</p>
                                 <div class="selectWrap">
                                     <span class="input-wrap input-select-wrap" readonly="">
-                                        <input readonly="" type="text" inputmode="text" autocomplete="off" autocapitalize="off" name="fundingCategory" class="innerInput inputCategory" value="">
+                                        <input readonly="" type="text" inputmode="text" autocomplete="off" autocapitalize="off" name="fundingCategory" class="innerInput inputCategory" value="만화">
                                         <div name="arrow2-down" class="icon-svg">
                                             <svg viewBox="0 0 48 48">
                                                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -478,7 +478,7 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/js/funding/funding-initial-info.js"></script>
 <script src="/js/funding/funding-file.js"></script>
-<script>
+<!--<script>
     globalThis.uuids;
 
     //===========================================
@@ -614,6 +614,6 @@
         }
 
 
-</script>
+</script>-->
 
 </html>
